@@ -1,0 +1,12 @@
+
+--[ Start ]---------------------------------------------[ 2017-05-26 14:20:22 ]-
+watch_oracle.pl is started in directory .
+Use of uninitialized value $cfgfile in concatenation (.) or string at watch_oracle.pl line 4109.
+configuration file=
+Reading sections: GENERAL,ORACLE,ULS,WATCH_ORACLE from configuration file
+Use of uninitialized value $filename in open at Misc.pm line 2197.
+Use of uninitialized value $filename in concatenation (.) or string at Misc.pm line 2214.
+get_config2..fifError: Cannot open file ''.
+Use of uninitialized value $inifile in concatenation (.) or string at Misc.pm line 756.
+get_config2: Info: '' does not contain any section => nothing read!
+fileparse(): need a valid pathname at watch_oracle.pl line 4120
